styles.css
@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap");
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

div>h1{
    font-family: 'Poppins', sans-serif;
    color:rgb(48, 47, 47);
    font-weight: 800;
    font-size: 5rem;
    text-align: center;
    word-spacing: 1px;
    letter-spacing: 1px;


}
button{
    font-family: 'source sans 3', sans-serif;
    font-weight: 600;
}
main {
    background-image: url('./assets/printer-bg.jpg');
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center;
    height: 100vh;
    display: flex;
   
    
}
img.logo{
    z-index: 1;
}
.blur-container{
    height: 100dvh;
    opacity: 0.9;
    backdrop-filter: blur(10px) saturate(180%);
    -webkit-backdrop-filter: blur(5px) saturate(180%);
    background-color: rgba(255, 255, 255, 0.15);
}
 

